# py-arkworks-bls12381

./: .gitignore  Cargo.toml  README.md  py_arkworks_bls12381.pyi  pyproject.toml  stubtest_allowlist.txt
.env/: pyvenv.cfg
.github/workflows/: CI.yml
benchmarks/: test_bench.py
examples/: bls.py  eip2537.py  pairing.py  point.py  scalar.py
examples/benches/: arkworks.py  bench.py  py_ecc_4844.py
src/: lib.rs  wrapper.rs
tests/: conftest.py  test_g1.py  test_g2.py  test_map.py  test_pairing.py  test_scalar.py
