[package]
name = "py_arkworks_bls12381"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_arkworks_bls12381"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.0"
ark-ec = "0.4.0"
rayon = "1.6.1"
hex = "0.4.3"
num-traits = "0.2.15"
