[package]
name = "py_arkworks_bls12381"
version = "0.4.0"
edition = "2024"

[lib]
name = "py_arkworks_bls12381"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["num-bigint"] }
ark-bls12-381 = "0.5.0"
ark-serialize = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
rayon = "1.10"
hex = "0.4"
num-traits = "0.2"
num-bigint = "0.4"

[features]
default = ["parallel", "asm"]
parallel = ["ark-ec/parallel", "ark-ff/parallel"]
asm = ["ark-ff/asm"]
