[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "py_arkworks_bls12381"
description = "Python bindings for BLS12-381 curve operations using arkworks"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/crate-crypto/py_arkworks_bls12381"

[tool.maturin]
features = ["pyo3/extension-module"]
